--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -2,10 +2,11 @@
     package="com.poppio.bioclock"
     android:versionCode="1"
     android:versionName="1.0" >
-
+	<uses-permission android:name="android.permission.WAKE_LOCK"></uses-permission>
     <uses-sdk
         android:minSdkVersion="8"
         android:targetSdkVersion="15" />
+    
 
     <application
         android:icon="@drawable/ic_launcher"
