notification now working

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -25,6 +25,7 @@
         
         <activity android:name=".Info_screen"></activity>
         
+        <service android:name=".NotificationCenter" />
     </application>
 
 </manifest>
